# altv-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
altv-core/: Cargo.toml
altv-core/src/: lib.rs
altv-module/: Cargo.toml
altv-module/src/: lib.rs
altv-sdk/: Cargo.toml  build.rs
altv-sdk/src/: array.rs  core.rs  elements.rs  events.rs  lib.rs  log.rs  mvalue.rs  natives.rs  rgba.rs  string.rs  string_view.rs  vector.rs
altv-sdk/tests/: hashing.rs
examples/custom-components/: Cargo.toml
examples/custom-components/src/: lib.rs
examples/freeroam/: Cargo.toml
examples/freeroam/src/: lib.rs
examples/freeroam/src/systems/: afk_kicker.rs  mod.rs  weather_sync.rs
examples/gangwar/: Cargo.toml
examples/gangwar/src/: lib.rs  turf.rs
examples/gangwar/src/systems/: mod.rs  player_spawner.rs
examples/testing/: Cargo.toml
examples/testing/src/: lib.rs
src/: app.rs  game_data.rs  lib.rs  logger.rs  state.rs
