[package]
name = "altv-core"
version = "0.1.0"
authors = ["Dimaa <personal@dimaa.io>"]
edition = "2018"
description = "AltV core"
repository = "https://gitlab.com/Dimaa/altv-rs"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrev = "1.1.1"
specs = "0.16.1"
