[package]
name = "altv-module"
version = "0.1.0"
authors = ["Dimaa <personal@dimaa.io>"]
edition = "2018"
description = "AltV module"
repository = "https://github.com/DimaaIO/altv-rs"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "altv_module"
crate-type = ["cdylib"]

[dependencies]
altv = { path = "../" }
libloading = "0.6.2"
