[package]
name = "altv-sdk"
version = "0.1.0"
authors = ["Dimaa <personal@dimaa.io>", "7Hazard <hazard9909@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv-core = { path = "../altv-core", version = "0.1.0" }

[build-dependencies]
bindgen = "0.53.2"
