[package]
name = "altv-gangwar"
version = "0.1.0"
authors = ["Dimaa <personal@dimaa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
altv = { path = "../../" }
chrono = "0.4.11"
rand = "0.7.3"
serde_json = "1.0.53"
